# MLTest

./: .gitignore
KNN/: CMakeLists.txt  readme.md
KNN/src/: knn.cpp
SVM/src/: smo.py  svm.py
